--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import copy\n",
     "import torch\n",
     "import numpy as np\n",
     "import scipy as sp\n",
@@ -23,10 +24,8 @@
     "sys.path.append(\"/home/zanardi/Codes/ML/RONEK/ronek/\")\n",
     "from ronek2 import env\n",
     "from ronek2 import const\n",
-    "from ronek2.roms import CoBRAS\n",
     "from ronek2 import backend as bkd\n",
-    "from ronek2.systems import ArgonCR\n",
-    "from ronek2.systems.equilibrium import Equilibrium"
+    "from ronek2.systems import ArgonCR"
    ]
   },
   {
@@ -65,7 +64,7 @@
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True,\n",
-    "  isothermal=True\n",
+    "  isothermal=False\n",
     ")\n",
     "model.set_output(max_mom=2, linear=True)"
    ]
@@ -124,8 +123,9 @@
     "n = {k: read_pop(k) for k in (\"Ar\", \"Arp\")}\n",
     "n[\"em\"] = (box[\"X_em\"] * box[\"n\"]).values.reshape(-1,1)\n",
     "n_true = np.hstack([n[k] for k in model.species_order]).T\n",
-    "w_true = model.mix.get_rho(bkd.to_torch(n_true)).numpy() / rho\n",
-    "T_true = box[[\"Th\", \"Te\"]].values.T"
+    "rho_true = model.mix.get_rho(bkd.to_torch(n_true)).numpy()\n",
+    "T_true = box[[\"Th\", \"Te\"]].values.T\n",
+    "rho = np.sum(rho_true[:,0])"
    ]
   },
   {
@@ -135,8 +135,7 @@
    "outputs": [],
    "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
-    "# y0[:model.mix.nb_comp] = n_true[:,0] / const.UNA\n",
-    "y0[:model.mix.nb_comp] = w_true[:,0]\n",
+    "y0[:model.mix.nb_comp] = rho_true[:,0] / rho\n",
     "y0[-2] = Th0\n",
     "y0[-1] = Te0 if model.isothermal else model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
     "y0"
@@ -154,14 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w_pred = y[:model.mix.nb_comp]\n",
+    "w_pred = copy.deepcopy(y[:model.mix.nb_comp])\n",
     "n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
-    "# n_pred = y[:model.mix.nb_comp] * const.UNA\n",
-    "T_pred = y[model.mix.nb_comp:]\n",
+    "T_pred = copy.deepcopy(y[model.mix.nb_comp:])\n",
     "T_pred[-1] = T_pred[-1] if model.isothermal else model.mix.get_Te(pe=T_pred[-1], ne=n_pred[-1])"
    ]
   },
@@ -222,11 +220,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eq = Equilibrium(system=model, clipping=True)"
+    "n0 = torch.tensor(n_pred[:,0])\n",
+    "model.mix.update(n0, torch.tensor(Th0), torch.tensor(Te0))\n",
+    "e = model.mix.e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yeq_cons = model.equil.from_cons(rho, e)\n",
+    "yeq_cons[-1] = y[-1,-1]\n",
+    "yeq_cons, y[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(yeq_cons - y[:,-1]) / y[:,-1]"
    ]
   },
   {
@@ -236,19 +256,8 @@
    "outputs": [],
    "source": [
     "yeq = y[:,-1]\n",
-    "yeq[:-2] *= const.UNA\n",
-    "yeq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neq = n_pred[:,-1]\n",
-    "rho = (model.mix.m @ neq).numpy()\n",
-    "model.mix.set_rho(rho)"
+    "ylin0 = y0 - yeq\n",
+    "A = model.jac(0.0, yeq)"
    ]
   },
   {
@@ -257,20 +266,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.mix.update(torch.tensor(y[:-2,0])*const.UNA, torch.tensor(y[-2,0]), torch.tensor(y[-1,0]))\n",
-    "e = model.mix.e\n",
-    "e.numpy()"
+    "ylin = [sp.linalg.expm(A*ti) @ ylin0 + yeq for ti in t]\n",
+    "ylin = np.vstack(ylin).T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.mix.update(torch.tensor(yeq[:-2]), torch.tensor(yeq[-2]), torch.tensor(yeq[-1]))\n",
-    "# e = model.mix.e\n",
-    "# e.numpy()"
+    "w_lin = copy.deepcopy(ylin[:model.mix.nb_comp])\n",
+    "n_lin = model.mix.get_n(bkd.to_torch(w_lin)).numpy()\n",
+    "T_lin = copy.deepcopy(ylin[model.mix.nb_comp:])\n",
+    "T_lin[-1] = T_lin[-1] if model.isothermal else model.mix.get_Te(pe=T_lin[-1], ne=n_lin[-1])"
    ]
   },
   {
@@ -279,7 +288,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rho, T_pred[:,-1]"
+    "err = []\n",
+    "for i in range(2):\n",
+    "  ierr = np.mean(np.abs((T_true[i] - T_lin[i])/T_true[i]))\n",
+    "  err.append(ierr)\n",
+    "  plt.semilogx(t[1:], T_true[i][1:])\n",
+    "  plt.semilogx(t[1:], T_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "print(\"T\")\n",
+    "print(np.mean(err))\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -288,238 +306,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yeq"
+    "for s in model.mix.species.values():\n",
+    "  print(s.name)\n",
+    "  err = []\n",
+    "  for i in s.indices:\n",
+    "    ierr = np.mean(np.abs((n_true[i] - n_lin[i])/n_true[i]))\n",
+    "    err.append(ierr)\n",
+    "    plt.loglog(t[1:], n_true[i][1:])\n",
+    "    plt.loglog(t[1:], n_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "  print(np.mean(err))\n",
+    "  plt.show()\n",
+    "  plt.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yeq_prim = eq.from_prim_th_neq(rho, *T_pred[:,-1])\n",
-    "yeq_prim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(yeq_prim - yeq)/yeq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yeq_cons = eq.from_cons(rho, e)\n",
-    "yeq_cons"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(yeq_cons - yeq)/yeq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fun = eq._from_prim_thermal_neq_fun\n",
-    "jac_exp = torch.func.jacrev(fun)\n",
-    "jac = torch.func.jacrev(model._fun, argnums=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yeq_c = torch.clone(torch.tensor(yeq))\n",
-    "yeq_c[:-2] /= const.UNA\n",
-    "yeq_c_log = torch.log(yeq_c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(jac(0.0, yeq_c)[:-2,:-2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.diag(torch.exp(yeq_c)[:-2]) @ jac(0.0, yeq_c)[:-2,:-2] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jac_exp(yeq_c_log)[:-2,:-2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rom = CoBRAS(\n",
-    "  system=model,\n",
-    "  quadrature=None,\n",
-    "  path_to_saving=\"./\",\n",
-    "  saving=True,\n",
-    "  verbose=True\n",
-    ")\n",
-    "rom.build_sol_interp(t, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tm = -np.flip(t[:-600])\n",
-    "tm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g0 = np.zeros_like(model.C[0])\n",
-    "g0[2] = 1.0\n",
-    "y = sp.integrate.solve_ivp(\n",
-    "  fun=rom.adjoint_fun,\n",
-    "  t_span=[tm[0],tm[-1]],\n",
-    "  y0=g0,\n",
-    "  method=\"LSODA\",\n",
-    "  t_eval=tm,\n",
-    "  first_step=1e-14,\n",
-    "  rtol=1e-6,\n",
-    "  atol=1e-10,\n",
-    "  jac=rom.adjoint_jac\n",
-    ").y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rom.adjoint_fun(t[-1], model.C[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = model.jac(t[-1], y[:,-1])\n",
-    "np.savetxt(\"jac.txt\", x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = rom.adjoint_jac(t[-1], model.C[0])\n",
-    "np.savetxt(\"jac.txt\", x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, g0 in enumerate(model.C):\n",
-    "  print(f\"Solving {i}\")\n",
-    "  g = rom.solve_adjoint(np.flip(t), g0)\n",
-    "  print(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = torch.rand(5)\n",
-    "A = torch.rand(5,5)\n",
-    "\n",
-    "fun = lambda z: A @ torch.exp(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
