--- a/test/test_ad.ipynb
+++ b/test/test_ad.ipynb
@@ -172,24 +172,6 @@
     "for i in range(2):\n",
     "  ierr = np.mean(np.abs((T_true[i] - T_pred[i])/T_true[i]))\n",
     "  err.append(ierr)\n",
-    "  plt.loglog(t[1:], T_true[i][1:])\n",
-    "  plt.loglog(t[1:], T_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
-    "print(\"T\")\n",
-    "print(np.mean(err))\n",
-    "plt.show()\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "err = []\n",
-    "for i in range(2):\n",
-    "  ierr = np.mean(np.abs((T_true[i] - T_pred[i])/T_true[i]))\n",
-    "  err.append(ierr)\n",
     "  plt.semilogx(t[1:], T_true[i][1:])\n",
     "  plt.semilogx(t[1:], T_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
     "print(\"T\")\n",
@@ -218,12 +200,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stop"
+    "def solve_lin(t, y0):\n",
+    "  A = model.jac(0.0, y0)\n",
+    "  b = model.fun(0.0, y0)\n",
+    "  y = sp.integrate.solve_ivp(\n",
+    "    fun=lambda t, y: A @ y + b,\n",
+    "    t_span=[0.0,t[-1]],\n",
+    "    y0=np.zeros_like(y0),\n",
+    "    method=\"LSODA\",\n",
+    "    t_eval=t,\n",
+    "    first_step=1e-14,\n",
+    "    rtol=1e-6,\n",
+    "    atol=1e-20,\n",
+    "    jac=lambda t, y: A\n",
+    "  ).y\n",
+    "  y += y0.reshape(-1,1)\n",
+    "  return y"
    ]
   },
   {
@@ -232,62 +236,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n0 = torch.tensor(n_pred[:,0])\n",
-    "model.mix.update(n0, torch.tensor(Th0), torch.tensor(Te0))\n",
-    "e = model.mix.e"
+    "ylin = solve_lin(t, y0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yeq_cons = model.equil.from_cons(rho, e)\n",
-    "yeq_cons[-1] = y[-1,-1]\n",
-    "yeq_cons, y[:,-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(yeq_cons - y[:,-1]) / y[:,-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yeq = y[:,-1]\n",
-    "ylin0 = y0 - yeq\n",
-    "A = model.jac(0.0, yeq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ylin = [sp.linalg.expm(A*ti) @ ylin0 + yeq for ti in t]\n",
-    "ylin = np.vstack(ylin).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "w_lin = copy.deepcopy(ylin[:model.mix.nb_comp])\n",
     "n_lin = model.mix.get_n(bkd.to_torch(w_lin)).numpy()\n",
     "T_lin = copy.deepcopy(ylin[model.mix.nb_comp:])\n",
-    "T_lin[-1] = T_lin[-1] if model.isothermal else model.mix.get_Te(pe=T_lin[-1], ne=n_lin[-1])"
+    "T_lin[-1] = model.mix.get_Te(pe=T_lin[-1], ne=n_lin[-1])"
    ]
   },
   {
@@ -298,9 +259,9 @@
    "source": [
     "err = []\n",
     "for i in range(2):\n",
-    "  ierr = np.mean(np.abs((T_true[i] - T_lin[i])/T_true[i]))\n",
+    "  ierr = np.mean(np.abs((T_pred[i] - T_lin[i])/T_pred[i]))\n",
     "  err.append(ierr)\n",
-    "  plt.semilogx(t[1:], T_true[i][1:])\n",
+    "  plt.semilogx(t[1:], T_pred[i][1:])\n",
     "  plt.semilogx(t[1:], T_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
     "print(\"T\")\n",
     "print(np.mean(err))\n",
@@ -318,13 +279,61 @@
     "  print(s.name)\n",
     "  err = []\n",
     "  for i in s.indices:\n",
-    "    ierr = np.mean(np.abs((n_true[i] - n_lin[i])/n_true[i]))\n",
+    "    ierr = np.mean(np.abs((n_pred[i] - n_lin[i])/n_pred[i]))\n",
     "    err.append(ierr)\n",
-    "    plt.loglog(t[1:], n_true[i][1:])\n",
+    "    plt.loglog(t[1:], n_pred[i][1:])\n",
     "    plt.loglog(t[1:], n_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
     "  print(np.mean(err))\n",
     "  plt.show()\n",
     "  plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample time points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_interp = sp.interpolate.interp1d(t, y, kind=\"linear\", axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tvec = np.array([0.0] + np.geomspace(1e-12, 1e-4, 100).tolist())\n",
+    "tsamples = np.geomspace(1e-13, 1e-4, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, ti in enumerate(tsamples):\n",
+    "  \n",
+    "  print(f\"Time {i+1}: {ti} s\")\n",
+    "  print(\"=\"*40)\n",
+    "\n",
+    "  yref = y_interp(tvec+ti)\n",
+    "  ylin = solve_lin(tvec, yref[:,0])\n",
+    "\n",
+    "  for s in model.mix.species.values():\n",
+    "    for i in s.indices:\n",
+    "      plt.loglog(tvec[1:], yref[i][1:])\n",
+    "      plt.loglog(tvec[1:], ylin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   }
  ],
