--- a/test/test_iso copy 2.ipynb
+++ b/test/test_iso copy 2.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True,\n",
-    "  fixed_em=False\n",
+    "  fixed_em=True\n",
     ")\n",
     "model.set_output(max_mom=2, linear=True)"
    ]
@@ -178,10 +178,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Linear model"
+    "yeq = w_pred[:,-1]\n",
+    "yeq_prim = model.equil.from_prim(rho, Th0, Te0)\n",
+    "yeq_prim, yeq"
    ]
   },
   {
@@ -190,31 +194,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solve_lin(t, y0):\n",
-    "  A = model.jac(0.0, y0)\n",
-    "  b = model.fun(0.0, y0)\n",
-    "  y = sp.integrate.solve_ivp(\n",
-    "    fun=lambda t, y: A @ y + b,\n",
-    "    t_span=[0.0,t[-1]],\n",
-    "    y0=np.zeros_like(y0),\n",
-    "    method=\"LSODA\",\n",
-    "    t_eval=t,\n",
-    "    first_step=1e-14,\n",
-    "    rtol=1e-6,\n",
-    "    atol=1e-20,\n",
-    "    jac=lambda t, y: A\n",
-    "  ).y\n",
-    "  y += y0.reshape(-1,1)\n",
-    "  return y"
+    "ylin0 = y0[:-2] - yeq\n",
+    "A = model.jac(0.0, yeq)\n",
+    "b = model.fun(0.0, yeq)\n",
+    "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ylin = solve_lin(t, y0)"
+    "ylin = [sp.linalg.expm(A*ti) @ ylin0 + yeq for ti in t]\n",
+    "ylin = np.vstack(ylin).T"
    ]
   },
   {
@@ -237,7 +230,7 @@
     "  print(s.name)\n",
     "  err = []\n",
     "  for i in s.indices:\n",
-    "    ierr = np.mean(np.abs((n_pred[i] - n_lin[i])/n_pred[i]))\n",
+    "    ierr = np.mean(np.abs((n_true[i] - n_lin[i])/n_pred[i]))\n",
     "    err.append(ierr)\n",
     "    plt.loglog(t[1:], n_pred[i][1:])\n",
     "    plt.loglog(t[1:], n_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
