--- a/trash/test_ad_old.ipynb
+++ b/trash/test_ad_old.ipynb
@@ -25,7 +25,7 @@
     "from ronek2 import env\n",
     "from ronek2 import const\n",
     "from ronek2 import backend as bkd\n",
-    "from ronek2.systems import BoxIso"
+    "from ronek2.systems import BoxAd"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = BoxIso(\n",
+    "model = BoxAd(\n",
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True\n",
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol_ref = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/StS/argon/testcase/test_iso/output_box\""
+    "sol_ref = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/StS/argon/testcase/test_ad/output_box\""
    ]
   },
   {
@@ -136,7 +136,7 @@
     "y0 = np.zeros(model.nb_eqs)\n",
     "y0[:model.mix.nb_comp] = rho_true[:,0] / rho\n",
     "y0[-2] = Th0\n",
-    "y0[-1] = Te0\n",
+    "y0[-1] = model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
     "y0"
    ]
   },
@@ -146,8 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t_pred = t #np.geomspace(1e-12, 1e3)\n",
-    "y, runtime = model.solve_fom(t_pred, y0, rho)\n",
+    "y, runtime = model.solve_fom(t, y0, rho)\n",
     "runtime"
    ]
   },
@@ -158,7 +157,27 @@
    "outputs": [],
    "source": [
     "w_pred = copy.deepcopy(y[:model.mix.nb_comp])\n",
-    "n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()"
+    "n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
+    "T_pred = copy.deepcopy(y[model.mix.nb_comp:])\n",
+    "T_pred[-1] = model.mix.get_Te(pe=T_pred[-1], ne=n_pred[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = []\n",
+    "for i in range(2):\n",
+    "  ierr = np.mean(np.abs((T_true[i] - T_pred[i])/T_true[i]))\n",
+    "  err.append(ierr)\n",
+    "  plt.semilogx(t[1:], T_true[i][1:])\n",
+    "  plt.semilogx(t[1:], T_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "print(\"T\")\n",
+    "print(np.mean(err))\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -169,9 +188,13 @@
    "source": [
     "for s in model.mix.species.values():\n",
     "  print(s.name)\n",
+    "  err = []\n",
     "  for i in s.indices:\n",
+    "    ierr = np.mean(np.abs((n_true[i] - n_pred[i])/n_true[i]))\n",
+    "    err.append(ierr)\n",
     "    plt.loglog(t[1:], n_true[i][1:])\n",
-    "    plt.loglog(t_pred[1:], n_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "    plt.loglog(t[1:], n_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "  print(np.mean(err))\n",
     "  plt.show()\n",
     "  plt.close()"
    ]
@@ -185,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,26 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ylin = solve_lin(t, y0[:-2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, yi in enumerate(y.T):\n",
-    "  A = model.jac(0.0, yi)\n",
-    "  l, v = sp.linalg.eig(A.T)\n",
-    "  stable = (l.real < 0.0).all()\n",
-    "  if not stable:\n",
-    "    print(np.where(l.real >= 0.0))\n",
-    "    print(t[i], l.real.max())"
+    "ylin = solve_lin(t, y0)"
    ]
   },
   {
@@ -238,7 +246,27 @@
    "outputs": [],
    "source": [
     "w_lin = copy.deepcopy(ylin[:model.mix.nb_comp])\n",
-    "n_lin = model.mix.get_n(bkd.to_torch(w_lin)).numpy()"
+    "n_lin = model.mix.get_n(bkd.to_torch(w_lin)).numpy()\n",
+    "T_lin = copy.deepcopy(ylin[model.mix.nb_comp:])\n",
+    "T_lin[-1] = model.mix.get_Te(pe=T_lin[-1], ne=n_lin[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = []\n",
+    "for i in range(2):\n",
+    "  ierr = np.mean(np.abs((T_pred[i] - T_lin[i])/T_pred[i]))\n",
+    "  err.append(ierr)\n",
+    "  plt.semilogx(t[1:], T_pred[i][1:])\n",
+    "  plt.semilogx(t[1:], T_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "print(\"T\")\n",
+    "print(np.mean(err))\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -258,6 +286,54 @@
     "  print(np.mean(err))\n",
     "  plt.show()\n",
     "  plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample time points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_interp = sp.interpolate.interp1d(t, y, kind=\"linear\", axis=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tvec = np.array([0.0] + np.geomspace(1e-12, 1e-4, 100).tolist())\n",
+    "tsamples = np.geomspace(1e-13, 1e-4, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, ti in enumerate(tsamples):\n",
+    "  \n",
+    "  print(f\"Time {i+1}: {ti} s\")\n",
+    "  print(\"=\"*40)\n",
+    "\n",
+    "  yref = y_interp(tvec+ti)\n",
+    "  ylin = solve_lin(tvec, yref[:,0])\n",
+    "\n",
+    "  for s in model.mix.species.values():\n",
+    "    for i in s.indices:\n",
+    "      plt.loglog(tvec[1:], yref[i][1:])\n",
+    "      plt.loglog(tvec[1:], ylin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "    plt.show()\n",
+    "    plt.close()"
    ]
   }
  ],
