--- a/test/test_ad.ipynb
+++ b/test/test_ad.ipynb
@@ -65,7 +65,7 @@
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True\n",
     ")\n",
-    "model.set_output(max_mom=2, linear=True)"
+    "model.compute_c_mat(max_mom=2)"
    ]
   },
   {
@@ -212,6 +212,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_time_scale(y, index=-2):\n",
+    "  A = model.jac(0.0, y)[:31,:31]\n",
+    "  l = sp.linalg.eigvals(A)\n",
+    "  tau = np.sort(np.abs(1.0/l))\n",
+    "  return tau[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def solve_lin(t, y0):\n",
     "  A = model.jac(0.0, y0)\n",
     "  b = model.fun(0.0, y0)\n",
@@ -232,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,8 +274,8 @@
     "for i in range(2):\n",
     "  ierr = np.mean(np.abs((T_pred[i] - T_lin[i])/T_pred[i]))\n",
     "  err.append(ierr)\n",
-    "  plt.semilogx(t[1:], T_pred[i][1:])\n",
-    "  plt.semilogx(t[1:], T_lin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "  plt.semilogx(t[1:-200], T_pred[i][1:-200])\n",
+    "  plt.semilogx(t[1:-200], T_lin[i][1:-200], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
     "print(\"T\")\n",
     "print(np.mean(err))\n",
     "plt.show()\n",
@@ -289,6 +302,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = 100 * np.mean(np.abs((ylin-y)/y), axis=0)\n",
+    "ierr = np.where(err < 3e1)[0][-1]\n",
+    "t[ierr]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.loglog(t[1:], err[1:])\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -297,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,10 +363,14 @@
     "  yref = y_interp(tvec+ti)\n",
     "  ylin = solve_lin(tvec, yref[:,0])\n",
     "\n",
+    "  tau = get_time_scale(yref[:,0], index=-2)\n",
+    "  print(tau)\n",
+    "\n",
     "  for s in model.mix.species.values():\n",
     "    for i in s.indices:\n",
     "      plt.loglog(tvec[1:], yref[i][1:])\n",
     "      plt.loglog(tvec[1:], ylin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "    plt.axvline(x=tau, color='r', linestyle='--')\n",
     "    plt.show()\n",
     "    plt.close()"
    ]
