--- a/test/test_ad copy.ipynb
+++ b/test/test_ad copy.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,12 +65,12 @@
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True\n",
     ")\n",
-    "model.compute_c_mat(max_mom=3)"
+    "model.compute_c_mat(max_mom=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
-    "y0[:model.mix.nb_comp] = rho_true[:,0] / rho\n",
+    "y0[:model.mix.nb_comp] = rho_true[:,0]\n",
     "y0[-2] = Th0\n",
     "y0[-1] = model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
     "y0"
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y, runtime = model.solve_fom(t, y0, rho, linear=False)\n",
+    "y, runtime = model.solve_fom(t, copy.deepcopy(y0), linear=False)\n",
     "runtime"
    ]
   },
@@ -212,8 +212,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ylin, runtime = model.solve_fom(t, y0, rho, linear=True)\n",
+    "ylin, runtime = model.solve_fom(t, copy.deepcopy(y0), linear=True)\n",
     "runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_time_scale(y, index=-2):\n",
+    "  A = model.jac(0.0, y)[:31,:31]\n",
+    "  l = sp.linalg.eigvals(A)\n",
+    "  tau = np.sort(np.abs(1.0/l))\n",
+    "  return tau[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve_lin(t, y0):\n",
+    "  A = model.jac(0.0, y0)\n",
+    "  b = model.fun(0.0, y0)\n",
+    "  y = sp.integrate.solve_ivp(\n",
+    "    fun=lambda t, y: A @ y + b,\n",
+    "    t_span=[0.0,t[-1]],\n",
+    "    y0=np.zeros_like(y0),\n",
+    "    method=\"LSODA\",\n",
+    "    t_eval=t,\n",
+    "    first_step=1e-14,\n",
+    "    rtol=1e-6,\n",
+    "    atol=1e-20,\n",
+    "    jac=lambda t, y: A\n",
+    "  ).y\n",
+    "  y += y0.reshape(-1,1)\n",
+    "  return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ylin = solve_lin(t, y0)"
    ]
   },
   {
@@ -266,6 +312,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err = 100 * np.mean(np.abs((ylin-y)/y), axis=0)\n",
+    "ierr = np.where(err < 3e1)[0][-1]\n",
+    "t[ierr]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.loglog(t[1:], err[1:])\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,18 +371,16 @@
     "  print(\"=\"*40)\n",
     "\n",
     "  yref = y_interp(tvec+ti)\n",
-    "  ylin, _ = model.solve_fom(tvec, yref[:,0], rho, linear=True)\n",
+    "  ylin = solve_lin(tvec, yref[:,0])\n",
     "\n",
-    "  tau1 = model.compute_lin_tlim(tvec, yref, rho, use_eig=True, err_max=25.0)\n",
-    "  tau2 = model.compute_lin_tlim(tvec, yref, rho, use_eig=False, err_max=25.0)\n",
-    "  print(tau1, tau2)\n",
+    "  tau = get_time_scale(yref[:,0], index=-2)\n",
+    "  print(tau)\n",
     "\n",
     "  for s in model.mix.species.values():\n",
     "    for i in s.indices:\n",
     "      plt.loglog(tvec[1:], yref[i][1:])\n",
     "      plt.loglog(tvec[1:], ylin[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
-    "    plt.axvline(x=tau1[1], color='r', linestyle='--')\n",
-    "    plt.axvline(x=tau2[1], color='g', linestyle='--')\n",
+    "    plt.axvline(x=tau, color='r', linestyle='--')\n",
     "    plt.show()\n",
     "    plt.close()"
    ]
