--- a/test/test_cobras.ipynb
+++ b/test/test_cobras.ipynb
@@ -12,6 +12,7 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
+    "import dill as pickle\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -27,7 +28,9 @@
     "from ronek2 import utils\n",
     "from ronek2 import backend as bkd\n",
     "from ronek2.systems import BoxAd\n",
-    "from ronek2.roms import CoBRAS"
+    "from ronek2.roms import CoBRAS\n",
+    "\n",
+    "import ronek2.postproc.plotting as pltt"
    ]
   },
   {
@@ -66,13 +69,21 @@
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True\n",
-    ")\n",
-    "system.compute_c_mat(max_mom=2)"
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system.compute_c_mat(max_mom=2, state_specs=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,19 +119,8 @@
    "source": [
     "X, Y = cobras(\n",
     "  nb_meas=3,\n",
-    "  xnot=[-2,-1],\n",
-    "  modes=False,\n",
-    "  pod=True\n",
+    "  modes=False\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.shape, Y.shape"
    ]
   },
   {
@@ -130,11 +130,63 @@
    "outputs": [],
    "source": [
     "cobras(\n",
-    "  nb_meas=4,\n",
+    "  X=X,\n",
+    "  Y=Y,\n",
     "  xnot=[-2,-1],\n",
     "  modes=True,\n",
     "  pod=True\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bases = pickle.load(open(\"./cobras_bases.p\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(15):\n",
+    "  nb = str(i+1)\n",
+    "  b = bases[\"phi\"][:,i]\n",
+    "  pltt.plot_dist_2d(\n",
+    "    x=np.arange(len(b)),\n",
+    "    y=b,\n",
+    "    labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\%s_{%s}$\" % (\"phi\", nb)],\n",
+    "    scales=[\"linear\", \"linear\"],\n",
+    "    markersize=1,\n",
+    "    # figname=path + f\"/{name}_{nb.zfill(2)}\",\n",
+    "    save=False,\n",
+    "    show=True\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(15):\n",
+    "  nb = str(i+1)\n",
+    "  b = bases[\"psi\"][:,i]\n",
+    "  pltt.plot_dist_2d(\n",
+    "    x=np.arange(len(b)),\n",
+    "    y=b,\n",
+    "    labels=[r\"$\\epsilon_i$ [eV]\", r\"$\\%s_{%s}$\" % (\"psi\", nb)],\n",
+    "    scales=[\"linear\", \"linear\"],\n",
+    "    markersize=1,\n",
+    "    # figname=path + f\"/{name}_{nb.zfill(2)}\",\n",
+    "    save=False,\n",
+    "    show=True\n",
+    "  )"
    ]
   }
  ],
