--- a/test/test_cobras.ipynb
+++ b/test/test_cobras.ipynb
@@ -74,16 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "system.compute_c_mat(max_mom=2, state_specs=False)"
+    "system.compute_c_mat(max_mom=2, state_specs=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,8 @@
     "X, Y = cobras(\n",
     "  nb_meas=3,\n",
     "  modes=False\n",
-    ")"
+    ")\n",
+    "X.shape, Y.shape"
    ]
   },
   {
@@ -140,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
    "source": [
     "for i in range(15):\n",
     "  nb = str(i+1)\n",
-    "  b = bases[\"psi\"][:,i]\n",
+    "  b = bases[\"psi\"][:-1,i]\n",
     "  pltt.plot_dist_2d(\n",
     "    x=np.arange(len(b)),\n",
     "    y=b,\n",
