--- a/test/test_cobras.ipynb
+++ b/test/test_cobras.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system.compute_c_mat(max_mom=2, state_specs=True)"
+    "system.compute_c_mat(max_mom=2, state_specs=False)"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "source": [
     "rho = 1e-2\n",
     "T = 3e4\n",
-    "Te = 3e2\n",
+    "Te = 5e3\n",
     "mu_quad = {\n",
     "  \"x\": np.array([rho, T, Te]).reshape(1,-1),\n",
     "  \"w\": np.ones((1,1))\n",
@@ -104,7 +104,7 @@
    "source": [
     "cobras = CoBRAS(\n",
     "  system=system,\n",
-    "  tgrid={\"start\": 1e-12, \"stop\": 1e-3, \"num\": 25},\n",
+    "  tgrid={\"start\": 1e-12, \"stop\": 1e-3, \"num\": 50},\n",
     "  mu_quad=mu_quad,\n",
     "  path_to_saving=\"./\",\n",
     "  saving=True\n",
@@ -133,7 +133,7 @@
     "cobras(\n",
     "  X=X,\n",
     "  Y=Y,\n",
-    "  xnot=[-2,-1],\n",
+    "  xnot=[0,-3,-2,-1],\n",
     "  modes=True,\n",
     "  pod=True\n",
     ")"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,19 +165,19 @@
     "    markersize=1,\n",
     "    # figname=path + f\"/{name}_{nb.zfill(2)}\",\n",
     "    save=False,\n",
-    "    show=True\n",
+    "    show=False\n",
     "  )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(15):\n",
     "  nb = str(i+1)\n",
-    "  b = bases[\"psi\"][:-1,i]\n",
+    "  b = bases[\"psi\"][:,i]\n",
     "  pltt.plot_dist_2d(\n",
     "    x=np.arange(len(b)),\n",
     "    y=b,\n",
@@ -186,8 +186,107 @@
     "    markersize=1,\n",
     "    # figname=path + f\"/{name}_{nb.zfill(2)}\",\n",
     "    save=False,\n",
-    "    show=True\n",
+    "    show=False\n",
     "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = system.get_tgrid(1e-13, 1e-3, 200)\n",
+    "y0, rho = system.equil.get_init_sol(mu_quad[\"x\"].squeeze())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yfom, _ = system.solve_fom(t, y0, rho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_fom = copy.deepcopy(yfom[:system.mix.nb_comp])\n",
+    "n_fom = system.mix.get_n(bkd.to_torch(w_fom)).numpy()\n",
+    "T_fom = copy.deepcopy(yfom[system.mix.nb_comp:])\n",
+    "T_fom[-1] = system.mix.get_Te(pe=T_fom[-1], ne=n_fom[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdim = 7\n",
+    "\n",
+    "# bases = pickle.load(open(\"./pod_bases.p\", \"rb\"))\n",
+    "# phi, psi = bases[\"phi\"][:,:rdim], bases[\"phi\"][:,:rdim]\n",
+    "\n",
+    "bases = pickle.load(open(\"./cobras_bases.p\", \"rb\"))\n",
+    "phi, psi = bases[\"phi\"][:,:rdim], bases[\"psi\"][:,:rdim]\n",
+    "\n",
+    "system.set_basis(phi, psi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yrom, _ = system.solve_rom(t, y0, rho)\n",
+    "nt = len(yrom.T)\n",
+    "nt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_rom = copy.deepcopy(yrom[:system.mix.nb_comp])\n",
+    "n_rom = system.mix.get_n(bkd.to_torch(w_rom)).numpy()\n",
+    "T_rom = copy.deepcopy(yrom[system.mix.nb_comp:])\n",
+    "T_rom[-1] = system.mix.get_Te(pe=T_rom[-1], ne=n_rom[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(2):\n",
+    "  plt.semilogx(t[1:nt], T_fom[i][1:nt])\n",
+    "  plt.semilogx(t[1:nt], T_rom[i][1:nt], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for s in system.mix.species.values():\n",
+    "  print(s.name)\n",
+    "  for i in s.indices:\n",
+    "    plt.loglog(t[1:nt], n_fom[i][1:nt])\n",
+    "    plt.loglog(t[1:nt], n_rom[i][1:nt], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "  plt.show()\n",
+    "  plt.close()"
    ]
   }
  ],
