--- a/test/test_cobras.ipynb
+++ b/test/test_cobras.ipynb
@@ -44,7 +44,7 @@
     "  \"device\": \"cpu\",\n",
     "  \"device_idx\": 0,\n",
     "  \"nb_threads\": 2,\n",
-    "  \"epsilon\": None,\n",
+    "  \"epsilon\": 1e-16,\n",
     "  \"floatx\": \"float64\"\n",
     "}\n",
     "env.set(**env_opts)"
@@ -89,7 +89,7 @@
    "source": [
     "rho = 1e-2\n",
     "T = 3e4\n",
-    "Te = 5e3\n",
+    "Te = 3e2\n",
     "mu_quad = {\n",
     "  \"x\": np.array([rho, T, Te]).reshape(1,-1),\n",
     "  \"w\": np.ones((1,1))\n",
@@ -192,17 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "t = system.get_tgrid(1e-13, 1e-3, 200)\n",
-    "y0, rho = system.equil.get_init_sol(mu_quad[\"x\"].squeeze())"
+    "y0, rho = system.equil.get_init_sol(mu_quad[\"x\"].squeeze())\n",
+    "y0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdim = 7\n",
+    "rdim = 5\n",
     "\n",
     "# bases = pickle.load(open(\"./pod_bases.p\", \"rb\"))\n",
     "# phi, psi = bases[\"phi\"][:,:rdim], bases[\"phi\"][:,:rdim]\n",
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,6 +273,28 @@
     "  plt.semilogx(t[1:nt], T_rom[i][1:nt], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in (\"Ar\", \"Arp\"):\n",
+    "  s = system.mix.species[k]\n",
+    "  pltt.plot_mom_evolution(\n",
+    "    path=f\"./figs/{k}/\",\n",
+    "    t=t[1:nt],\n",
+    "    n_m={\"FOM\": bkd.to_torch(n_fom.T[1:nt,s.indices]), \"ROM\": bkd.to_torch(n_rom.T[1:nt,s.indices])},\n",
+    "    molecule=s,\n",
+    "    molecule_label=\"{%s}\" % k,\n",
+    "    tlim=None,\n",
+    "    ylim_err=None,\n",
+    "    err_scale=\"linear\",\n",
+    "    hline=None,\n",
+    "    max_mom=2\n",
+    "  )"
    ]
   },
   {
